--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jest": "^29.2.2",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
+    "tsafe": "^1.2.1",
     "typescript": "^4.8.4"
   }
 }
